# fld

./: .gitignore  .rex.toml  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  configure
config/: config.yaml
docs/outline/: pipeline.tex
examples/fld-all/: config  run
src/: barcodes.cpp  barcodes.hpp  categorize.cpp  categorize.hpp  diff.cpp  diff.hpp  duplicate.cpp  duplicate.hpp  fld-all  fld-pad  fld-sort  fold.cpp  fold.hpp  inspect.cpp  inspect.hpp  library.cpp  library.hpp  m2.cpp  m2.hpp  main.cpp  main.hpp  merge.cpp  merge.hpp  merge_padding.cpp  merge_padding.hpp  nuc.cpp  nuc.hpp  padding.cpp  padding.hpp  pipeline.cpp  pipeline.hpp  prepend.cpp  prepend.hpp  preprocess.cpp  preprocess.hpp  random.cpp  random.hpp  sort.cpp  sort.hpp  test.cpp  (+10 more)
src/config/: barcode_config.cpp  barcode_config.hpp  design_config.cpp  design_config.hpp  stem_config.cpp  stem_config.hpp
src/domain/: barcode.cpp  barcode.hpp  hairpin.cpp  hairpin.hpp  sequence.cpp  sequence.hpp
src/io/: csv_format.cpp  csv_format.hpp  fasta_io.cpp  fasta_io.hpp  progress.cpp  progress.hpp  writers.cpp  writers.hpp
tests/: test_barcode.cpp  test_csv_format.cpp  test_design.cpp  test_hairpin.cpp  test_helpers.hpp  test_pipeline.cpp  test_prepend.cpp  test_preprocess.cpp  test_sequence.cpp  test_sort.cpp  test_todna.cpp  test_torna.cpp
